# nu_plugin_desktop_notifications

./: Cargo.toml  Jenkinsfile  README.md  build.nu  nupm.nuon  package.nuon
.github/workflows/: dependency-update.yaml  publish_crate.yaml
src/: main.rs  notify.rs
