[dependencies]
nu-plugin = "0.87.1"

[dependencies.notify-rust]
version = "4.10.0"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.87.1"

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to send desktop notifications"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_desktop_notifications"
keywords = ["nushell", "desktop", "notification", "plugin"]
license = "MIT"
name = "nu_plugin_desktop_notifications"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_desktop_notifications"
version = "1.0.5"
