[dependencies]
nu-plugin = "0.104.0"

[dependencies.notify-rust]
version = "4.11.7"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.104.0"

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to send desktop notifications"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_desktop_notifications"
keywords = ["nushell", "desktop", "notification", "plugin"]
license = "MIT"
name = "nu_plugin_desktop_notifications"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_desktop_notifications"
version = "1.2.11"
